DEV-1593 Fix tests