@@ -5,8 +5,10 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 import java.util.Collections;
+import java.util.List;
 
 import com.hartwig.pipeline.Arguments;
+import com.hartwig.pipeline.sbpapi.ImmutableSbpSample;
 import com.hartwig.pipeline.sbpapi.SbpRestApi;
 
 import org.junit.Before;
@@ -15,6 +17,10 @@ import org.junit.Test;
 public class BiopsyMetadataApiTest {
 
     private static final String BIOPSY = "biopsy";
+    private static final String TUMOR_NAME = "CPCT12345678T";
+    private static final String TUMOR_BARCODE = "FR22222222";
+    private static final String REF_NAME = "CPCT12345678R";
+    private static final String REF_BARCODE = "FR11111111";
     private SbpRestApi restApi;
     private BiopsyMetadataApi victim;
 
@@ -32,25 +38,33 @@ public class BiopsyMetadataApiTest {
 
     @Test(expected = IllegalArgumentException.class)
     public void noTumorForBiopsy() {
-        when(restApi.getSamplesByBiopsy(BIOPSY)).thenReturn(Collections.emptyList());
+        when(restApi.getSamplesByBiopsy(BIOPSY)).thenReturn(Collections.singletonList(ref()));
         victim.get();
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void noReferenceForBiopsy() {
-        when(restApi.getSamplesByBiopsy(BIOPSY)).thenReturn(Collections.emptyList());
+        when(restApi.getSamplesByBiopsy(BIOPSY)).thenReturn(Collections.singletonList(tumor()));
         victim.get();
     }
 
     @Test
     public void returnsMetadataForBiopsySamples() {
-        when(restApi.getSamplesByBiopsy(BIOPSY)).thenReturn(Collections.emptyList());
+        when(restApi.getSamplesByBiopsy(BIOPSY)).thenReturn(List.of(tumor(), ref()));
         SomaticRunMetadata somaticRunMetadata = victim.get();
         assertThat(somaticRunMetadata.bucket()).isEqualTo(Arguments.testDefaults().outputBucket());
-        assertThat(somaticRunMetadata.name()).isEqualTo("FR11111111-FR22222222");
-        assertThat(somaticRunMetadata.tumor().sampleName()).isEqualTo("CPCT12345678T");
-        assertThat(somaticRunMetadata.tumor().barcode()).isEqualTo("FR22222222");
-        assertThat(somaticRunMetadata.reference().sampleName()).isEqualTo("CPCT12345678R");
-        assertThat(somaticRunMetadata.reference().barcode()).isEqualTo("FR11111111");
+        assertThat(somaticRunMetadata.name()).isEqualTo(REF_BARCODE + "-" + TUMOR_BARCODE);
+        assertThat(somaticRunMetadata.tumor().sampleName()).isEqualTo(TUMOR_NAME);
+        assertThat(somaticRunMetadata.tumor().barcode()).isEqualTo(TUMOR_BARCODE);
+        assertThat(somaticRunMetadata.reference().sampleName()).isEqualTo(REF_NAME);
+        assertThat(somaticRunMetadata.reference().barcode()).isEqualTo(REF_BARCODE);
+    }
+
+    private static ImmutableSbpSample tumor() {
+        return ImmutableSbpSample.builder().id(1).name(TUMOR_NAME).barcode(TUMOR_BARCODE).type("tumor").status("Ready").build();
+    }
+
+    private static ImmutableSbpSample ref() {
+        return ImmutableSbpSample.builder().id(1).name(REF_NAME).barcode(REF_BARCODE).type("ref").status("Ready").build();
     }
 }
